add more XML comments add libman.json instead of boilerplate codes

--- a/src/PortFreight/PortFreight.MVC/Views/_ViewImports.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PortFreight.MVC
 @using PortFreight.MVC.Models
+@using PortFreight.MVC.Models.Shipment;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
