--- a/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shipments" asp-action="Index">Shipments</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vessels" asp-action="Index">Vessels</a>
+                        </li>
                     </ul>
                 </div>
             </div>
