--- a/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Containers" asp-action="Index">Containers</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
