add tracking events controller, models and views

--- a/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ports" asp-action="Index">Ports</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TrackingEvents" asp-action="Index">Tracking Events</a>
+                        </li>
                     </ul>
                 </div>
             </div>
