--- a/src/PortFreight/PortFreight.MVC/Views/Auth/Login.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Auth/Login.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-control">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
