--- a/src/PortFreight/PortFreight.MVC/Views/Auth/Register.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Auth/Register.cshtml
@@ -43,7 +43,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-control">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
