--- a/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PortFreight/PortFreight.MVC/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="TrackingEvents" asp-action="Index">Tracking Events</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
                     </ul>
                 </div>
                 <partial name="_LoginPartial"/>
